...
    let categorias = MockCategorias.mock
    
    override func viewDidLoad() {
        super.viewDidLoad()
        configCollectionView()
        navigationController?.navigationBar.prefersLargeTitles = true
        navigationItem.title = "Movimentos"
        navigationController?.navigationBar.backgroundColor = .backGroundColor
        self.view.insertSubview(UIView(frame: .zero), at: 0)
    }

    func configCollectionView() {
        //Set delegates
...
