...
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dw4-kD-bvw">
                                                            <rect key="frame" x="0.0" y="0.0" width="26" height="26"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="26" id="7rx-Gx-Yie"/>
                                                                <constraint firstAttribute="width" constant="26" id="V7s-hK-7fg"/>
                                                            </constraints>
                                                            <state key="normal" backgroundImage="instagram"/>
                                                            <connections>
                                                                <action selector="goToInstagram:" destination="Lz7-JC-K51" eventType="touchUpInside" id="2bt-lK-qOM"/>
                                                            </connections>
                                                        </button>
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dwv-1h-eXr">
                                                            <rect key="frame" x="47" y="0.0" width="26" height="26"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="26" id="6l6-0Y-cAB"/>
                                                                <constraint firstAttribute="width" constant="26" id="9K2-AH-sTt"/>
                                                            </constraints>
                                                            <state key="normal" backgroundImage="internet"/>
                                                            <connections>
                                                                <action selector="goToWeb:" destination="Lz7-JC-K51" eventType="touchUpInside" id="M08-pQ-JEp"/>
                                                            </connections>
                                                        </button>
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gDq-hU-8WC">
                                                            <rect key="frame" x="94" y="0.0" width="26" height="26"/>
                                                            <constraints>
                                                                <constraint firstAttribute="width" constant="26" id="SC2-LG-Hnz"/>
                                                                <constraint firstAttribute="height" constant="26" id="qTV-Oo-qw4"/>
                                                            </constraints>
                                                            <state key="normal" backgroundImage="facebook"/>
                                                            <connections>
                                                                <action selector="goToFacebook:" destination="Lz7-JC-K51" eventType="touchUpInside" id="gdD-NG-xdx"/>
                                                            </connections>
                                                        </button>
                                                    </subviews>
                                                </stackView>
...
                                                    <rect key="frame" x="372" y="25" width="26" height="23.5"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="26" id="4OU-rZ-B7h"/>
                                                        <constraint firstAttribute="width" constant="26" id="KtN-GA-e58"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <state key="normal" backgroundImage="calendar" catalog="system"/>
                                                    <connections>
                                                        <action selector="buttonAlternarVisualizacao:" destination="AXW-OO-nZd" eventType="touchUpInside" id="YdW-em-dB8"/>
                                                    </connections>
                                                </button>
                                                <button opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hmo-k2-zwn">
                                                    <rect key="frame" x="313" y="24" width="51" height="33"/>
...
                            <constraint firstItem="Bly-SL-szS" firstAttribute="top" secondItem="vew-n2-HCA" secondAttribute="top" id="1Ah-jR-X6K"/>
                            <constraint firstItem="Bly-SL-szS" firstAttribute="leading" secondItem="vew-n2-HCA" secondAttribute="leading" id="fE9-zv-L9f"/>
                            <constraint firstItem="vew-n2-HCA" firstAttribute="trailing" secondItem="Bly-SL-szS" secondAttribute="trailing" id="n3l-af-DZb"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" largeTitleDisplayMode="always" id="ggI-Nx-ycO">
                        <barButtonItem key="rightBarButtonItem" title="Seguir" id="JuC-x8-aZW">
                            <color key="tintColor" name="ActionColor"/>
                            <connections>
                                <action selector="seguirMovimento:" destination="egA-Is-TQf" id="Ooo-dY-nBk"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
