...
            if Persistence.containsMovimento(movimentoId: movimento.movimentoId) {
                Persistence.unfollow(movimentoId: movimento.movimentoId)
                buttonSeguir.title = "Seguir"
                buttonSeguir.tintColor = .actionColor
            } else {
                Persistence.follow(movimentoId: movimento.movimentoId)
                buttonSeguir.title = "Seguindo"
                buttonSeguir.tintColor = .confirmedColor
            }
        }
    }
     
    override func viewDidLoad() {
...
